--- a/src/App.css
+++ b/src/App.css
@@ -109,8 +109,8 @@ input[type="radio"] {
 
 /* Change color when the radio button is checked */
 input[type="radio"]:checked {
-  background-color: #F68922; /* Blue when selected */
-  border-color: #EE7400; /* Border color changes to match the background */
+   /* background-color: #007AFF; Blue when selected */
+  border-color: #007AFF; /* Border color changes to match the background */
 }
 
 /* Optional: Style the inner circle to show when selected */
@@ -122,7 +122,8 @@ input[type="radio"]:checked::before {
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background-color: #F68922; /* Inner circle color */
+  background-color: #007AFF; /* Inner circle color */
+
 }
 
 @keyframes pop {
